import * as t from 'node:assert/strict';
import { describe, it } from 'vitest';
import { pass, fail } from '../../test-utils';
import { parseSource } from '../../../src/parser';

describe('Next - Import Meta', () => {
  for (const arg of [
    'class C {set x(_) { () => import.meta }}',
    'function f() { import.meta}',
    'class C {set x(_) { () => { import.meta } }}',
    'class C {set x(_) { if (1) { import.meta }}}',
    '({m() { if (1) {} else { import.meta }}})',
    '({m() { while (0) { import.meta }}})',
    '({m() { do { import.meta } while (0)}})',
    'class C {set x(_) { import.meta.url }}',
    'class C {set x(_) { import.meta[0] }}',
    'function f() { import.meta.couldBeMutable = true }',
    'class C {set x(_) { import.meta() }}',
    '({set x(_) { new import.meta.MagicClass}})',
    '({set x(_) { new import.meta}})',
    '({set x(_) { t = [...import.meta]}})',
    'class C {set x(_) { f = {...import.meta} }}',
    'class C {set x(_) { delete import.meta }}',
    "'use strict'; import.meta",
    "'use strict'; () => { import.meta }",
    "'use strict'; () => import.meta",
    "'use strict'; if (1) { import.meta }",
    "'use strict'; if (1) {} else { import.meta }",
    "'use strict'; while (0) { import.meta }",
    "'use strict'; do { import.meta } while (0)",
    "'use strict'; import.meta.url",
    "'use strict'; import.meta[0]",
    "'use strict'; import.meta.couldBeMutable = true",
    "'use strict'; import.meta()",
    "'use strict'; new import.meta.MagicClass",
    "'use strict'; new import.meta",
    "'use strict'; t = [...import.meta]",
    "'use strict'; f = {...import.meta}",
    '(import.meta?.a)',
    '(a?.import.meta)',
    "'use strict'; delete import.meta",
    'class C {m() { import.meta }}',
    'class C {m() { () => { import.meta } }}',
    'class C {m() { () => import.meta }}',
    'class C {m() { if (1) { import.meta } }}',
    'class C {m() { if (1) {} else { import.meta } }}',
    'class C {m() { while (0) { import.meta } }}',
    '({m() { do { import.meta } while (0)}})',
    '({m() { import.meta.url}})',
    '({m() { import.meta[0]}})',
    '({m() { import.meta.couldBeMutable = true}})',
    '({m() { import.meta()}})',
    '({m() { new import.meta.MagicClass}})',
    '({m: function() {new import.meta}})',
    '({m: function() {t = [...import.meta]}})',
    '({m: function() {f = {...import.meta}}})',
    '({m: function() {delete import.meta}})',
    '({set x(_) {import.meta}})',
    "'use strict'; ({m: function() { while (0) { import.meta }}})",
    'function f() { do { import.meta } while (0)}',
    'var f = function() {import.meta.url}',
    'var f = function() {import.meta[0]}',
    'var f = function() {import.meta.couldBeMutable = true}',
    'var f = function() {import.meta()}',
    'var f = function() {new import.meta.MagicClass}',
    'var f = function() {new import.meta}',
    'var f = function() {t = [...import.meta]}',
    'var f = function() {f = {...import.meta}}',
    'var f = function() {delete import.meta}',
    'f = {...import.meta}',
    'delete import.meta',
    'import.meta',
    '() => { import.meta }',
    '() => import.meta',
    'if (1) { import.meta }',
    'if (1) {} else { import.meta }',
    'while (0) { import.meta }',
    'do { import.meta } while (0)',
    'import.meta.url',
    'import.meta[0]()',
    'import.meta[0](x = 123) ',
    'import.meta([0](x = 123))',
    '(import.meta([0](x = 123)))',
    '(import.meta([x = (import.meta([x = (x)](x = 123)))](x = 123)))',
    '(import.meta([x = (a??a)](x = 123)))',
    '(import.meta([x = (a??a)](x = a?.b123)))',
    'import.meta[0]',
    'import.meta[0] = 123',
    'import.meta[0] = 123',
    'import.meta.couldBeMutable = true',
    '(import.meta.couldBeMutable = true)',
    'import.meta()',
    'new import.meta.MagicClass',
    'new import.meta',
    't = [...import.meta]',
    'export var meta = import.meta;',
    'export function getMeta() { return import.meta;}',
    'import.meta.url',
    'import("string")?.import.meta',
    '(a?.import("string")?.import.meta??(a))',
    'import.meta?.(a?.import("string")?.import.meta??(a))',
    'var a = import.meta;',
    'import.meta, 1;',
    '1, import.meta;',
    'import.meta, a = 1;',
    'a = 1, import.meta;',
    'import.meta.url = 1, import.meta.url = 2;',
    'import.meta, import.meta.url = 1;',
    'import.meta;',
  ]) {
    it(`${arg}`, () => {
      t.doesNotThrow(() => {
        parseSource(`${arg}`, { module: true, next: true });
      });
    });
    it(`${arg}`, () => {
      t.doesNotThrow(() => {
        parseSource(`${arg}`, { module: true, next: true, webcompat: true });
      });
    });
  }

  fail('Expressions - Import Meta (fail)', [
    { code: 'import?.meta', options: { next: true } },
    'import?.meta',
    { code: 'import?.meta', options: { module: true, next: true } },
    { code: '(import?.meta)', options: { module: true, next: true } },
    { code: '(import.meta([1 = ()](x = 123)))', options: { module: true, next: true } },
    { code: 'import.(meta([0](x = 123)))', options: { module: true, next: true } },
    { code: 'import.meta[0]() = 123', options: { module: true, next: true } },
    { code: '[import.meta] = [];', options: { module: true, next: true } },
    { code: '[...import.meta] = [];', options: { module: true, next: true } },
    { code: 'import.meta = 0;', options: { module: true, next: true } },
    { code: 'async function* f() { for await (import.meta of null) ; }', options: { module: true, next: true } },
    { code: 'for (import.meta in null) ;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: '({a: import.meta} = {});', options: { module: true, next: true } },
    { code: '({...import.meta} = {});', options: { module: true, next: true } },
    { code: 'import.meta++;', options: { module: true, next: true } },
    { code: 'var x, y, z; ( { import.meta } = {});', options: { module: true, next: true } },
    { code: 'var x, y, z; ( { x: import.meta } = {});', options: { module: true, next: true } },
    { code: 'var x, y, z; ( { x: import.meta = 1 } = {});', options: { module: true, next: true } },
    { code: 'var x, y, z; ( [import.meta] = {});', options: { module: true, next: true } },
    { code: 'var x, y, z; ( [import.meta = 1] = {});', options: { module: true, next: true } },
    { code: '"use strict"; let x, y, z; for (x of [import.meta] = {});', options: { module: true, next: true } },
    { code: '"use strict"; let x, y, z; for (x of [import.meta = 1] = {});', options: { module: true, next: true } },
    { code: '"use strict"; let x, y, z; for (x of { x: import.meta } = {});', options: { module: true, next: true } },
    { code: '"use strict"; let x, y, z; for (x in [import.meta] = {});', options: { module: true, next: true } },
    { code: '"use strict"; let x, y, z; for (x in [import.meta = 1] = {});', options: { module: true, next: true } },
    { code: '"use strict"; let x, y, z; for (x in { x: import.meta } = {});', options: { module: true, next: true } },
    { code: 'import.meta++;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: 'for (import.meta of null) ;', options: { module: true, next: true } },
    { code: '[import.meta] = [];', options: { module: true, next: true } },
    { code: '([import.meta] = [1])', options: { next: true } },
    { code: 'var import.meta', options: { next: true } },
    { code: 'for (var import.meta of [1]) {}', options: { webcompat: true } },
    { code: 'var import.meta', options: { module: true, next: true } },
    { code: String.raw`import.m\u0065ta;`, options: { module: true, next: true } },
    { code: String.raw`import.\u006deta;`, options: { module: true, next: true } },
    { code: 'import.meta2;', options: { module: true, next: true } },
  ]);

  pass('Next - Import Meta (pass)', [
    { code: `({m() { import.meta.url}})`, options: { module: true, next: true } },
    { code: `if (1) { import.meta }`, options: { module: true, next: true } },
    { code: `var f = function() {import.meta.couldBeMutable = true}`, options: { module: true, next: true } },
    { code: `import.meta[0]`, options: { module: true, next: true } },
    { code: `do { import.meta } while (0)`, options: { module: true, next: true } },
    { code: `import.meta()`, options: { module: true, next: true } },
    { code: `t = [...import.meta]`, options: { module: true, next: true } },
    { code: `"use strict"; ({m() { while (0) { import.meta } }})`, options: { module: true, next: true } },
    { code: `delete import.meta`, options: { module: true, next: true } },
    { code: `import.meta.resolve('something')`, options: { module: true, next: true } },
    { code: `const size = import.meta.scriptElement.dataset.size || 300;`, options: { module: true, next: true } },
    { code: `x = import.meta`, options: { module: true, next: true } },
    { code: `() => { import.meta }`, options: { module: true, next: true } },
    { code: 'x = \nimport.meta', options: { module: true, ranges: true, loc: true } },
    { code: 'x = \nimport.meta.url', options: { module: true, ranges: true, loc: true } },
    { code: 'import.meta', options: { module: true, ranges: true, loc: true } },
    { code: 'import.meta.url', options: { module: true, ranges: true, loc: true } },
  ]);
});
